init CommandHandler, ConnectionHandler

--- a/netchange.cabal
+++ b/netchange.cabal
@@ -27,6 +27,8 @@ executable netchange
   other-modules:
         Models
       , RoutingTable
+      , CommandHandler
+      , ConnectionHandler
 
   ghc-options:
       -Wall
